--- a/apps/calendar/src/css/daygrid/dayGrid.css
+++ b/apps/calendar/src/css/daygrid/dayGrid.css
@@ -1,5 +1,6 @@
 .layout.month {
   height: 100%;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .month .day-names {
@@ -68,12 +69,13 @@
   top: 0;
   left: 0;
   width: 100%;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 /* TODO: define this class in more common place */
 .weekday-event {
   cursor: pointer;
+  padding: 5px;
 }
 
 .weekday {
