--- a/apps/calendar/src/css/daygrid/dayGrid.css
+++ b/apps/calendar/src/css/daygrid/dayGrid.css
@@ -33,6 +33,11 @@
   padding: 3px 0;
 }
 
+.daygrid-cell-custom-disabled{
+  background-repeat: repeat;
+  background: repeating-linear-gradient(-45deg, transparent, transparent 8px, #ccc 10px, #ccc 10px);
+}
+
 .daygrid-cell + .daygrid-cell {
   border-left: 1px solid #e5e5e5;
 }
