--- a/apps/calendar/src/css/events/grid.css
+++ b/apps/calendar/src/css/events/grid.css
@@ -31,6 +31,11 @@
   cursor: col-resize;
 }
 
+.grid-cell-date .weekday-grid-date {
+  position: relative;
+  z-index: 1;
+}
+
 .grid-cell-date .weekday-grid-date.weekday-grid-date-decorator {
   display: inline-block;
   width: 26px;
